--- a/src/sass/components/_topbar.scss
+++ b/src/sass/components/_topbar.scss
@@ -1,3 +1,4 @@
+//@format
 @mixin topnav {
     $title_font_size: 2rem;
     $title_font_size--mobile: 1.4rem;
@@ -77,15 +78,59 @@
             //margin-top: rem-calc(8);
             width: $topbar-input-width !important;
             input {
-                margin-bottom:0;
+                margin-bottom: 0;
             }
             .form-submit {
-                display:none;
+                display: none;
             }
         }
     }
 }
 
+@mixin topnav-mobile {
+    $offcanvas-full-screen-bg: $black;
+    $offcanvas-full-screen-side: left;
+    $offcanvas-full-screen-closebutton-size: 5rem;
+
+    .offcanvas-full-screen {
+        @include off-canvas-base(
+            $background: $offcanvas-full-screen-bg,
+            $transition: 0.3s ease-in-out
+        );
+        @include off-canvas-position(
+            $position: $offcanvas-full-screen-side//$size: 100%
+        );
+    }
+
+    .offcanvas-full-screen-inner {
+        padding: 1rem;
+        text-align: center;
+    }
+
+    .offcanvas-full-screen-menu {
+        @include menu-base;
+        @include menu-direction(vertical);
+
+        a {
+            color: $white;
+
+            &:hover {
+                color: darken($white, 30%);
+            }
+        }
+    }
+
+    .offcanvas-full-screen-close {
+        color: $white;
+        font-size: $offcanvas-full-screen-closebutton-size;
+
+        &:hover {
+            color: darken($white, 30%);
+        }
+    }
+}
+
+@include topnav-mobile;
 @include topnav;
 
 .mobile-menu-button {
