--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -53,6 +53,10 @@ header {
 }
 
 $dropdownmenu-background: $tan-3;
+header nav {
+
+    background: $tan-3;
+}
 header .menu {
     //display:none;
   text-align:left;
