--- a/src/sass/components/_topbar.scss
+++ b/src/sass/components/_topbar.scss
@@ -55,14 +55,6 @@
                 display: none;
             }
         }
-        #responsive-menu {
-            //margin-top: $top_spacing;
-        }
-        .block--menu {
-            @extend .top-bar-left;
-            margin-top: 0;
-            //border-radius: 3px 0 0 3px;
-        }
         .main-menu__items {
             & > li.first.is-dropdown-submenu-parent {
                 border-radius: 4px 0 0 4px;
@@ -74,7 +66,7 @@
         }
 
         .block--islandora-solr-simple {
-            @extend .top-bar-right;
+            //@extend .top-bar-right;
             //margin-top: rem-calc(8);
             width: $topbar-input-width !important;
             input {
@@ -90,16 +82,28 @@
 @mixin topnav-mobile {
     $offcanvas-full-screen-bg: $black;
     $offcanvas-full-screen-side: left;
+    $offcanvas-full-screen-width: 100%;
     $offcanvas-full-screen-closebutton-size: 5rem;
-
+    .mobile-nav-panel {
+        .l-region--navigation > * {
+            margin-bottom: $global-margin;
+        }
+    }
+    .form-submit {
+        display: none !important;
+    }
     .offcanvas-full-screen {
         @include off-canvas-base(
             $background: $offcanvas-full-screen-bg,
             $transition: 0.3s ease-in-out
         );
-        @include off-canvas-position(
-            $position: $offcanvas-full-screen-side//$size: 100%
-        );
+        @include off-canvas-position($position: $offcanvas-full-screen-side);
+        width: $offcanvas-full-screen-width;
+        height: $offcanvas-full-screen-width;
+        -webkit-transform: translateX(-$offcanvas-full-screen-width);
+        -ms-transform: translateX(-$offcanvas-full-screen-width);
+        transform: translateX(-$offcanvas-full-screen-width);
+        overflow-y: auto;
     }
 
     .offcanvas-full-screen-inner {
@@ -107,6 +111,7 @@
         text-align: center;
     }
 
+    .mobile-nav-panel .menu,
     .offcanvas-full-screen-menu {
         @include menu-base;
         @include menu-direction(vertical);
@@ -128,32 +133,23 @@
             color: darken($white, 30%);
         }
     }
+    $topnav-breakpoint: 1217px;
+    .topnav .l-region--navigation {
+        display: none;
+        @include breakpoint($topnav-breakpoint) {
+            display: flex;
+            width: 100%;
+            align-items: center;
+            justify-content: flex-end;
+            //margin-top: $global-margin/2;
+        }
+    }
+    .menu-icon {
+        @include breakpoint($topnav-breakpoint) {
+            display: none;
+        }
+    }
 }
 
 @include topnav-mobile;
 @include topnav;
-
-.mobile-menu-button {
-    @include breakpoint(small down) {
-        @include hamburger(#fff);
-    }
-}
-.topnav .main-menu {
-    display: none;
-}
-.topnav.is-stuck .main-menu {
-    display: block;
-}
-.l-region--navigation {
-    display: none;
-    @include breakpoint(1217px) {
-        display: flex;
-        width: 100%;
-        align-items: center;
-        justify-content: flex-end;
-        margin-top: $global-margin/2;
-    }
-}
-.adminimal-menu .topnav.is-stuck {
-    margin-top: rem-calc(28) !important;
-}
