--- a/src/sass/islandarchives.styles.scss
+++ b/src/sass/islandarchives.styles.scss
@@ -4,7 +4,7 @@
 //@import "abstractions/{YOUR FILE NAME HERE}";
 //@import "base/{YOUR FILE NAME HERE}";
 //@import "components/{YOUR FILE NAME HERE}";
-
+@import 'fonts';
 @import 'settings';
 @import 'my-mixins';
 
