--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -77,7 +77,7 @@ $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
 //$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
-$body-font-family: $font__fell-1;
+$body-font-family: $font__vollkorn;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -119,7 +119,7 @@ $block-grid-max: 8;
 // ------------------
 
 //$header-font-family: $body-font-family;
-$header-font-family: $font__fell-1--sc;
+$header-font-family: $font__vollkorn;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
