--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -72,7 +72,7 @@ header .menu {
     color: $white;
     &:hover {
       background: $tan-1;
-      color:$black;
+      //color:$black;
     }
   }
 }
