--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,73 +1,63 @@
+//@format
+
 .l-header {
-  background:$tan-2;
+  background: $tan-2;
 
   padding-top: $global_padding;
 }
 .l-region--header {
-
-nav {
+  nav {
     display: flex;
     justify-content: space-around;
+  }
+  .topnav {
+    background: $tan-3;
+  }
 }
-    .topnav {
-
-  background:$tan-3;
-    }
-}
-
-
 
 header {
-
   text-align: center;
-
+  padding-bottom: $global_padding/2;
+  border-top: 4px double;
+  border-bottom: 4px double;
 }
 .site-name {
-
   margin: 0 $global-margin;
   color: $black;
-
 }
 .site-slogan {
-
   @extend h2;
 }
 
-.site-name__icon { 
+.site-name__icon {
   svg {
     fill: $black;
-
   }
   padding-top: rem-calc(10);
 
-  svg { 
+  svg {
     width: 3rem;
     height: 3rem;
   }
 }
 .site-name__container {
-
   display: flex;
   justify-content: center;
-
 }
 
 $dropdownmenu-background: $tan-3;
 header nav {
-
-    background: $tan-3;
+  background: $tan-3;
 }
 header .menu {
-    //display:none;
-  text-align:left;
+  //display:none;
+  text-align: left;
   //margin-top: $global-margin;
   @extend .menu-centered;
   &__items {
-
     background: $tan-3;
   }
   a {
-
     //font-family: $font__fell-1--sc;
     color: $white;
     &:hover {
@@ -78,10 +68,8 @@ header .menu {
   }
 }
 .dropdown.menu > li > a {
-    background: $dropdownmenu-background;
+  background: $dropdownmenu-background;
 }
 .dropdown.menu > li > a {
-    background: $dropdownmenu-background;
+  background: $dropdownmenu-background;
 }
-
-
