--- a/src/sass/_my-mixins.scss
+++ b/src/sass/_my-mixins.scss
@@ -1,3 +1,7 @@
+@mixin double_borders {
+  border-bottom: 4px double;
+  border-top: 4px double;
+}
 @mixin shadow($level: 1) {
   @if $level == 1 {box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);} 
   @else if $level == 2 {box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);}
