--- a/src/sass/components/_search-form.scss
+++ b/src/sass/components/_search-form.scss
@@ -1,31 +1,31 @@
-.simple-search {
+.islandora-solr-simple-search-form {
   input[type="submit"],
   label {
     display:none;
   }
 
-  input[type="text"] {
-    margin: 0;
-    font-family: $font__fell-1--sc;
-    display: block;
-    box-sizing: border-box;
-    width: 100%;
-    height: rem-calc(38.8);
-    //border-radius: 0 3px 3px 0;
-    padding: 0.5rem;
-    border: none;
-    background-color: #fefefe;
-    box-shadow: none;
-    font-size: 1rem;
-    font-weight: normal;
-    line-height: 1.5;
-    color: #2f2b27;
-    transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+  //input[type="text"] {
+    //margin: 0;
+    //font-family: $font__fell-1--sc;
+    //display: block;
+    //box-sizing: border-box;
+    //width: 100%;
+    //height: rem-calc(38.8);
+    ////border-radius: 0 3px 3px 0;
+    //padding: 0.5rem;
+    //border: none;
+    //background-color: #fefefe;
+    //box-shadow: none;
+    //font-size: 1rem;
+    //font-weight: normal;
+    //line-height: 1.5;
+    //color: #2f2b27;
+    //transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
+    //-webkit-appearance: none;
+    //-moz-appearance: none;
+    //appearance: none;
   
-  }
+  //}
 }
 .block--islandora-solr simple-search {
 
