--- a/src/sass/components/_collection-views.scss
+++ b/src/sass/components/_collection-views.scss
@@ -1,65 +1,53 @@
 //@format
 
-//new
-//old
-.group-collection-header {
-  @include xy-grid-container;
-  @include xy-grid;
-  .field--name-field-image {
-    @include xy-cell(4);
-    img {
-      width: 100%;
-      @include thumbnail;
-    }
-  }
-  .group-info {
-    @include xy-cell(8);
-    p {
-      font-size: 1.2rem;
-    }
-    .field__label {
-      @extend h3;
-    }
-    .field--type-taxonomy-term-reference {
-      display: flex;
-      border-top: 1px solid #ccc;
-      border-bottom: 1px solid #ccc;
-      padding: $global-padding 0;
-      margin-bottom: $global-margin;
-      .field__items {
-        display: flex;
-        font-size: 1.2rem;
-        margin-right: 5px;
-        .field__item {
-          margin-right: 10px;
-          line-height: 2;
-          &::after {
-            content: ',';
-          }
-        }
-      }
-    }
-  }
-  border-bottom: 1px solid #ccc;
-  padding-bottom: $global-padding * 2;
-  margin-bottom: $global-margin;
-}
-.islandora-collection-search-form {
-  display: flex;
-}
-.l-content {
+.ia_root .l-content {
   > * {
+    //outline: 1px solid red;
+  }
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 1em;
+  grid-template-areas:
+    'header header header header'
+    'tabs tabs tabs tabs'
+    'img    desc   desc   desc'
+    'img    tags   tags   tags'
+    'img    search search search'
+    'footer footer footer footer';
+  .pageTitle {
+    grid-area: header;
+  }
+  .tabs {
+    grid-area: tabs;
+    display: none;
   }
   .block--islandora-blocks-datastreams {
-    float: left;
-    @include clearfix;
-    margin-right: $global-margin * 2;
+    grid-area: img;
+    //float: left;
+    //@include clearfix;
+    //margin-right: $global-margin * 2;
+  }
+  .islandora-collection-metadata-description {
+    grid-area: desc;
+  }
+  .islandora-collection-metadata-in-collections {
+    grid-area: tags;
+  }
+  #block-islandora-collection-search-islandora-collection-search {
+    grid-area: search;
+    .islandora-collection-search-form {
+      display: flex;
+    }
+  }
+  .view-collection {
+    grid-area: footer;
   }
   .islandora-collection-metadata-markup {
     display: none;
   }
   .islandora-collection-metadata {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 4px double #796554;
   }
   .view-collection {
     clear: both;
