--- a/src/sass/components/_collection-views.scss
+++ b/src/sass/components/_collection-views.scss
@@ -20,7 +20,7 @@
   }
   .tabs {
     grid-area: tabs;
-    display: none;
+    //display: none;
   }
   .block--islandora-blocks-datastreams {
     grid-area: img;
