--- a/src/sass/components/_collection-views.scss
+++ b/src/sass/components/_collection-views.scss
@@ -3,6 +3,9 @@
 .ia_root.collection-view-layout .l-content {
   > * {
     //outline: 1px solid red;
+    .thumbnail {
+      width: 100%;
+    }
   }
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
