--- a/src/sass/components/_unsorted.scss
+++ b/src/sass/components/_unsorted.scss
@@ -16,10 +16,10 @@
 }
 .pageTitle {
   font-size: 2.6rem;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
   line-height: 1;
-  border-top: 4px double #333;
-  border-bottom: 4px double #333;
-  padding: 5px;
+  //border-top: 4px double #333;
+  //border-bottom: 4px double #333;
+  //padding: 5px;
 }
