--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -108,6 +108,10 @@ $breakpoint-classes: (small medium large);
 
 $grid-row-width: $global-width;
 $grid-column-count: 12;
+$grid-margin-gutters: (
+  small: 20px,
+  medium: 60px,
+);
 $grid-column-gutter: (
   small: 20px,
   medium: 30px,
